fix box-sizing to align record content lines

--- a/src/styles/components/_records-content.scss
+++ b/src/styles/components/_records-content.scss
@@ -61,6 +61,7 @@
 }
 
 .child__list {
+  box-sizing: content-box;
   list-style: none;
   transition: $transition-default;
   padding-left: 20px;
